добавлен consumer и ручка для чтения из kafka
