# docs/swagger.json
@@ -4,6 +4,38 @@
         "contact": {}
     },
     "paths": {
+        "/api/consume": {
+            "get": {
+                "description": "Возвращает сообщения из кафки",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "consumer"
+                ],
+                "summary": "Получение сообщений из кафки",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/messages": {
             "post": {
                 "description": "Отправляет сообщение в Kafka и сохраняет его в базе данных через REST API",
@@ -24,7 +56,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/internal_handlers.HTTPMessage"
+                            "$ref": "#/definitions/handlers.HTTPMessage"
                         }
                     }
                 ],
@@ -84,7 +116,7 @@
         }
     },
     "definitions": {
-        "internal_handlers.HTTPMessage": {
+        "handlers.HTTPMessage": {
             "type": "object",
             "properties": {
                 "content": {
